# DriveAnalyzer

./: .gitignore  README.md  pyproject.toml
driveanalyzer/: __main__.py  cli.py
driveanalyzer/adapters/: linux.py  os_adapter.py  windows.py
driveanalyzer/core/: analyzer.py  device_info.py  health.py  smart.py  speed_test.py
driveanalyzer/gui/: app.py  main_window.py  workers.py
