[tool.poetry]
name = "driveanalyzer"
version = "0.1.0"
description = "USB/disk diagnostic tool"
authors = ["Nikita <idrago9696@gmail.com>"]
packages = [{include = "driveanalyzer"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
psutil = ">=5.9.0"
rich = ">=13.0.0"
wmi = {version = ">=1.5.1", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[tool.poetry.scripts]
driveanalyzer = "driveanalyzer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
